<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
    <!--  
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	-->
	<item
        android:id="@+id/route_options"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/route_options"/>
	<item
        android:id="@+id/steps_directions"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/steps_directions"/>
	<item
        android:id="@+id/route_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/route_map"/>
	<item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
	
</menu>
