<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/from"
            style="@style/textViewStyle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/location_prompt" />

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/from"
            android:layout_alignRight="@+id/duration"
            android:layout_below="@+id/from"
            android:text="@string/latitude_prompt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/to"
            android:layout_alignBottom="@+id/to"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/to"
            android:text="@string/my_latitude_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/to"
            android:paddingRight="6dp"
            android:text="@string/longitude_prompt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/duration"
            android:layout_alignRight="@+id/duration"
            android:layout_below="@+id/duration"
            android:text="@string/address_prompt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:text="@string/my_current_address2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:layout_toRightOf="@+id/textView6"
            android:text="@string/my_current_address3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/duration"
            android:layout_toRightOf="@+id/duration"
            android:text="@string/my_current_address1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView7"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignRight="@+id/distance"
            android:text="@string/my_longitude_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView01"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/destination_address_hint"
            android:inputType="textPostalAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView01"
            style="@style/textViewStyle"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView9"
            android:text="@string/insert_prompt" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView10"
            android:layout_below="@+id/editText1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinner1"
            android:layout_below="@+id/spinner2"
            android:text="@string/travel_mode_prompt"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText1"
            android:layout_below="@+id/textView10"
            android:entries="@array/travel_mode_array"
            android:prompt="@string/travel_mode_prompt" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinner1"
            android:layout_below="@+id/spinner1"
            android:text="@string/avoid_tolls_checkbox_prompt" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView12"
            android:layout_toRightOf="@+id/checkBox1"
            android:text="@string/avoid_highways_checkbox_prompt" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBox1"
            android:layout_below="@+id/checkBox1"
            android:text="@string/metric_system_prompt"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView12"
            android:layout_below="@+id/textView12"
            android:entries="@array/metric_system_array"
            android:prompt="@string/metric_system_prompt" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinner3"
            android:text="@string/departure_arrival_optional_prompt"
            android:textSize="16sp" />

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/timePicker2"
            android:layout_below="@+id/datePicker1"
            android:visibility="gone" />

        <TimePicker
            android:id="@+id/timePicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/datePicker2"
            android:visibility="gone" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/checkBox3"
            android:calendarViewShown="false"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/datePicker1"
            android:layout_below="@+id/textView11"
            android:text="@string/departure_prompt" />

        <DatePicker
            android:id="@+id/datePicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/checkBox4"
            android:calendarViewShown="false"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/datePicker2"
            android:layout_below="@+id/timePicker1"
            android:text="@string/arrival_prompt" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/timePicker2"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button1"
            android:text="@string/clear_button" />
    </RelativeLayout>

</ScrollView>