<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DirectionsListActivity" >

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/directions_list_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/From"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/listTitle"
        android:layout_below="@+id/listTitle"
        android:layout_toLeftOf="@+id/from"
        android:text="@string/from" />

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/listTitle"
        android:layout_toRightOf="@+id/textView1"
        android:paddingLeft="16dp"
        android:text="@string/unavailable"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listTitle"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/distance"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/Destination"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/From"
        android:layout_alignRight="@+id/From"
        android:layout_below="@+id/From"
        android:text="@string/to" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignBaseline="@+id/Destination"
        android:layout_alignBottom="@+id/Destination"
        android:layout_alignLeft="@+id/from"
        android:layout_alignRight="@+id/from"
        android:paddingLeft="16dp"
        android:text="@string/unavailable"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Destination"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/to"
        android:layout_alignRight="@+id/to"
        android:paddingLeft="16dp"
        android:text="@string/unavailable"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/distance"
        android:layout_alignRight="@+id/distance"
        android:paddingLeft="16dp"
        android:text="@string/unavailable"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1" >
    </ListView>

</RelativeLayout>